Fix styling on mobile screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -207,11 +207,12 @@ section {
 
 .project-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  gap: 3rem;
   justify-content: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
-  gap: 2rem;
 }
 .proj-details{
   font-size: 14px;
@@ -567,7 +568,7 @@ h3 {
   .project-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 2rem;
+    gap: 3rem;
 }
 /* NARROW VIEW */
 @media only screen and (max-width: 400px) {
@@ -576,9 +577,15 @@ h3 {
     font-size: 85%;
   }
 
-  .color-container{
-    max-width: 150%;
-  }
 
+  .color-container{
+    min-width: 300px;
+  }
+  .project-container{
+    min-width: 300px;
+  }
+  .article-container{
+    min-width: 250px;
+  }
 }
 }
